PaginationAndSort Repository